<resources>
    <string name="app_name">BookManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Books</string>
    <string name="menu_fav_books">Favorite books</string>
    <string name="menu_about">About</string>
    <string name="add_fav_str">+</string>
    <string name="about_image_desc">Application image on about screen.</string>
    <string name="version_tv_str">Version</string>
    <string name="version_info_str">v1.0</string>
    <string name="developer_tv_str">Developer</string>
    <string name="developer_info_str">MyCompany Kft.</string>
    <string name="headquarter_tv_str">Headquarter</string>
    <string name="headquarter_info_str">Budapest, Kossuth Lajos tér 1-3, 1055</string>
    <string name="book_image_str">Image of the book cover</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="sv_placeholder">search by title</string>
    <string name="hint">title</string>
    <string name="ok">OK</string>
    <string name="favorite_foreground">favorite_foreground</string>
    <string name="floating_btn_str">Clear favorites</string>
</resources>