<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_books">

    <fragment
        android:id="@+id/nav_books"
        android:name="aut.bme.bookmanager.ui.books.BooksFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="aut.bme.bookmanager.ui.favorite.FavoriteFragment"
        android:label="@string/menu_fav_books"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_about"
        android:name="aut.bme.bookmanager.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>